--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@types/tailwindcss": "^3.0.10",
+    "@types/webfontloader": "^1.6.34",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.13",
     "rollup-plugin-visualizer": "^5.6.0",
+    "sass": "^1.52.1",
     "tailwindcss": "^3.0.24",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-pwa": "^0.12.0",
     "vue-router": "^4.0.15",
-    "vue-tsc": "^0.34.7"
+    "vue-tsc": "^0.34.7",
+    "webfontloader": "^1.6.28"
   }
 }
